minecraft/build_log.txt
time /opt/homebrew/bin/scons target=template_debug platform=macos
scons: Reading SConscript files ...
Auto-detected 8 CPU cores available for build parallelism. Using 7 cores by default. You can override it with the -j argument.
Building for architecture universal on platform macos
->  src/register_types.cpp
->  src/marching_cubes/mc_grid_debug.cpp
->  src/marching_cubes/mc_ui.cpp
->  src/marching_cubes/mc_spatial.cpp
->  src/marching_cubes/mc_grid.cpp
->  src/marching_cubes/mc_manager.cpp
->  src/marching_cubes/mc_manager_placement.cpp
->  src/marching_cubes/mc_grid_placement.cpp
->  src/marching_cubes/mc_manager_debug.cpp
->  src/marching_cubes/mc_physics.cpp
->  src/marching_cubes/mc_grid_serialization.cpp
->  src/marching_cubes/mc.cpp
->  src/vehicle/arcade_vehicle.cpp
->  src/vehicle/config/wheel_config.cpp
->  src/vehicle/config/vehicle_config.cpp
->  src/vehicle/ai/vehicle_states.cpp
->  src/vehicle/debug/arcade_vehicle_debug.cpp
->  src/character/physics_character.cpp
->  src/character/ai/states/airborne_states.cpp
->  src/character/ai/states/combat_states.cpp
->  src/character/ai/states/grounded_states.cpp
->  src/camera/camera.cpp
->  src/camera/modes/character_mode.cpp
->  src/camera/modes/car_mode.cpp
->  src/camera/modes/orbit_mode.cpp
->  src/camera/modes/fly_mode.cpp
->  src/debug_draw/debug_quad.cpp
->  src/utils/encoding/rle.cpp
->  src/utils/raycast/mc_raycast.cpp
->  src/gen/doc_data.gen.cpp
->  src/terrain/ui.cpp
->  src/terrain/voxel_terrain.cpp
->  src/terrain/help.cpp
->  src/terrain/test.cpp
->  src/terrain/raycast.cpp
->  src/terrain/minecraft.cpp
->  src/terrain/smooth_terrain.cpp
->  src/cui/cui.cpp
->  src/game_manager/game_manager.cpp
->  src/game_manager/player_input.cpp
->  src/player/celeste_controller.cpp
scons: done reading SConscript files.
scons: Building targets ...
scons: `godot-cpp/bin/libgodot-cpp.macos.template_debug.universal.a' is up to date.
Compiling shared src/character/physics_character.cpp ...
Compiling shared src/game_manager/game_manager.cpp ...
src/character/physics_character.cpp:120:7: error: no member named 'register_character' in 'godot::GameManager'
  120 |                 gm->register_character(this);
      |                 ~~  ^
1 error generated.
src/game_manager/game_manager.cpp:26:84: error: no member named 'register_character' in 'godot::GameManager'; did you mean 'celeste_character'?
   26 |         ClassDB::bind_method(D_METHOD("register_character", "p_character"), &GameManager::register_character);
      |                                                                                           ^~~~~~~~~~~~~~~~~~
      |                                                                                           celeste_character
src/game_manager/game_manager.h:33:21: note: 'celeste_character' declared here
   33 |         CelesteController *celeste_character = nullptr;
      |                            ^
scons: *** [src/character/physics_character.os] Error 1
src/game_manager/game_manager.cpp:94:19: error: out-of-line definition of 'register_character' does not match any declaration in 'godot::GameManager'
   94 | void GameManager::register_character(PhysicsCharacter3D *p_character) {
      |                   ^~~~~~~~~~~~~~~~~~
src/game_manager/game_manager.h:19:7: note: GameManager defined here
   19 | class GameManager : public Node {
      |       ^~~~~~~~~~~
In file included from src/game_manager/game_manager.cpp:1:
In file included from src/game_manager/game_manager.h:4:
In file included from godot-cpp/gen/include/godot_cpp/classes/input_event.hpp:35:
In file included from godot-cpp/include/godot_cpp/classes/ref.hpp:36:
In file included from godot-cpp/gen/include/godot_cpp/classes/ref_counted.hpp:38:
godot-cpp/include/godot_cpp/core/class_db.hpp:337:21: error: no matching function for call to 'create_method_bind'
  337 |         MethodBind *bind = create_method_bind(p_method);
      |                            ^~~~~~~~~~~~~~~~~~
src/game_manager/game_manager.cpp:26:11: note: in instantiation of function template specialization 'godot::ClassDB::bind_method<godot::MethodDefinition, godot::CelesteController *GameManager::*>' requested here
   26 |         ClassDB::bind_method(D_METHOD("register_character", "p_character"), &GameManager::register_character);
      |                  ^
godot-cpp/include/godot_cpp/core/method_bind.hpp:345:13: note: candidate template ignored: could not match 'void (P...)' against 'godot::CelesteController *'
  345 | MethodBind *create_method_bind(void (T::*p_method)(P...)) {
      |             ^
godot-cpp/include/godot_cpp/core/method_bind.hpp:422:13: note: candidate template ignored: could not match 'void (P...) const' against 'godot::CelesteController *'
  422 | MethodBind *create_method_bind(void (T::*p_method)(P...) const) {
      |             ^
godot-cpp/include/godot_cpp/core/method_bind.hpp:504:13: note: candidate template ignored: could not match 'R (P...)' against 'godot::CelesteController *'
  504 | MethodBind *create_method_bind(R (T::*p_method)(P...)) {
      |             ^
godot-cpp/include/godot_cpp/core/method_bind.hpp:587:13: note: candidate template ignored: could not match 'R (P...) const' against 'godot::CelesteController *'
  587 | MethodBind *create_method_bind(R (T::*p_method)(P...) const) {
      |             ^
3 errors generated.
scons: *** [src/game_manager/game_manager.os] Error 1
scons: building terminated because of errors.
        2.71 real         2.81 user         0.30 sys
make: *** [b] Error 2
